--- a/templates/edit_cliente.html
+++ b/templates/edit_cliente.html
@@ -8,14 +8,17 @@
   </head>
   <body>
     <div class="container">
-        <h1>Seu perfil</h1>
+        <h1>Edite seus dados</h1>
         <hr>
-        <div class="container">
-            Nome: 
-            Idade:
-            Sexo: 
-        </div>
-
+        <form action="" method="post">
+            <input type="text" name="username" id="username" class="form-control" placeholder="Username">
+            <br>
+            <input type="email" name="email" id="email" placeholder="Email" class="form-control">
+            <br>
+            <input type="password" name="password" id="password" placeholder="Password" class="form-control">
+            <br>
+            <input type="submit" value="Cadastrar" class="btn btn-primary">
+        </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
