--- a/templates/lista_clientes.html
+++ b/templates/lista_clientes.html
@@ -8,14 +8,23 @@
   </head>
   <body>
     <div class="container">
-        <h1>Seu perfil</h1>
+        <h1>Lista de clientes</h1>
         <hr>
-        <div class="container">
-            Nome: 
-            Idade:
-            Sexo: 
-        </div>
-
+        <table class="table table-dark">
+            <thead>
+              <tr>
+                <th scope="col">id</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Email</th>
+                <th scope="col">Ações</th>
+              </tr>
+            </thead>
+            <tbody id="tabela_clientes">
+                {% for usuario in usuarios %}
+                  {% include "item_cliente.html" %}
+                {% endfor %}
+            </tbody>
+          </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
