Adicionando a opção de ver e editar um usuário

--- a/templates/item_cliente.html
+++ b/templates/item_cliente.html
@@ -1,9 +1,23 @@
-<tr>
+<tr id="cliente-{{usuario.id}}">
     <th scope="row">{{usuario.id}}</th>
     <td>{{usuario.nome}}</td>
     <td>{{usuario.email}}</td>
     <td>
-        <button class="editar btn btn-primary">Editar</button>
+        <button 
+            class="ver btn btn-success" 
+            c-get="{{url_for('cliente.ver_cliente', id_cliente=usuario.id)}}" 
+            c-target="#ver_usuario_modal" 
+            data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Ver
+        </button>
+
+
+        <button
+            class="editar btn btn-primary" 
+            c-get="{{url_for('cliente.form_update_cliente', id_cliente=usuario.id)}}"
+            c-target="#form-cliente">
+            Editar
+        </button>
     <button 
         c-delete="{{url_for('cliente.deletar_cliente', id_cliente=usuario.id)}}" 
         class="deletar btn btn-danger"
