--- a/templates/cadastro_cliente.html
+++ b/templates/cadastro_cliente.html
@@ -3,26 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastro</title>
+    <title>{% if cliente %}Editar {% else %} Criar{% endif %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
-        <h1>Cadastrar Cliente</h1>
+        <h1>{% if cliente %}Editar {% else %} Criar{% endif %}</h1>
         <hr>
-        <form action="{{url_for('cliente.cadastro_cliente')}}" class="c-form" c-append="#tabela_clientes" method="post">
+        {% if cliente %}
+          <form class="c-form" action="{{url_for('cliente.update_cliente',id_cliente=cliente.id)}}" method="PUT" c-swap="#cliente-{{cliente.id}}">
+        {% else %}
+          <form class="c-form"  action="{{url_for('cliente.cadastro_cliente')}}" method="POST" c-append="#tabela_clientes">
+        {% endif %}
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
-            <input type="text" name="username" id="username" class="form-control">
+            <input type="text" name="username" id="username" class="form-control" {% if cliente %}value="{{cliente.nome}}"{% endif %}>
           </div>
 
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp">
+            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" {% if cliente %}value="{{cliente.email}}"{% endif %}>
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
           </div>
 
-          <button type="submit" class="btn btn-primary">Cadastrar</button>
+          <button type="submit" class="btn btn-primary"> {% if cliente %}Editar{% else %}Criar{% endif %}</button>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
