Adicionando um banco de dados (postgresql)

--- a/templates/cliente.html
+++ b/templates/cliente.html
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="id">Id: {{usuario.id}}</div>
-  <div class="nome">Nome: {{usuario.nome}}</div>
+  <div class="nome">Nome: {{usuario.name}}</div>
   <div class="email">Email: {{usuario.email}}</div>
 </div>
