--- a/templates/cadastro_cliente.html
+++ b/templates/cadastro_cliente.html
@@ -11,18 +11,19 @@
         <h1>{% if cliente %}Editar {% else %} Criar{% endif %}</h1>
         <hr>
         {% if cliente %}
-          <form class="c-form" action="{{url_for('cliente.update_cliente',id_cliente=cliente.id)}}" method="PUT" c-swap="#cliente-{{cliente.id}}">
+          <form class="c-form" action="{{url_for('cliente.update_cliente',id_cliente=cliente.id)}}" method="PUT" c-swap="#cliente-{{cliente.id}}"c-reload-container="true">
         {% else %}
-          <form class="c-form"  action="{{url_for('cliente.cadastro_cliente')}}" method="POST" c-append="#tabela_clientes">
+          <form class="c-form"  action="{{url_for('cliente.cadastro_cliente')}}" method="POST" c-append="#tabela_clientes"c-reload-container="true" >
         {% endif %}
+
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
-            <input type="text" name="username" id="username" class="form-control" {% if cliente %}value="{{cliente.nome}}"{% endif %}>
+            <input type="text" name="username" id="username" class="form-control" {% if cliente %}value="{{cliente.name}}"{% endif %} required>
           </div>
 
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" {% if cliente %}value="{{cliente.email}}"{% endif %}>
+            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" {% if cliente %}value="{{cliente.email}}"{% endif %} required>
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
           </div>
 
